# aoc2015

./: LICENSE  aoc2015.cabal
app/: Main.hs
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
test/: Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day1Spec.hs  Day20Spec.hs  Day24Spec.hs  Day25Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
