name:                aoc2015
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ephemient/aoc2015#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Lin
maintainer:          ephemient@gmail.com
copyright:           2017 Daniel Lin
--category:
build-type:          Simple
extra-source-files:  README.md
data-files:
  day1.txt, day2.txt, day3.txt, day4.txt, day5.txt, day6.txt, day7.txt,
  day8.txt, day9.txt, day10.txt, day11.txt, day12.txt, day13.txt, day14.txt,
  day15.txt, day16.txt, day17.txt, day18.txt, day19.txt, day20.txt, day21.txt,
  day22.txt, day23.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12,
    Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22, Day23
  ghc-options:         -pgmL markdown-unlit
  build-depends:       base >= 4.7 && < 5
                     , markdown-unlit
                     , aeson
                     , arithmoi
                     , array
                     , bytestring
                     , containers
                     , cryptonite
                     , fgl
                     , heap
                     , memory
                     , mtl
                     , parallel
                     , parsec
                     , scientific
                     , text
  default-language:    Haskell2010

executable aoc2015-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc2015
  default-language:    Haskell2010

test-suite aoc2015-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , aoc2015
                     , containers
                     , hspec
  other-modules:
    Day1Spec, Day2Spec, Day3Spec, Day4Spec, Day5Spec, Day6Spec, Day7Spec,
    Day8Spec, Day9Spec, Day10Spec, Day11Spec, Day12Spec, Day13Spec, Day14Spec,
    Day15Spec, Day17Spec, Day18Spec, Day19Spec, Day20Spec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ephemient/aoc2015
